# docs/openapi.json
@@ -2,7 +2,7 @@
   "openapi": "3.1.0",
   "info": {
     "title": "MLOps Project API",
-    "description": "Robustní vrstvená architektura splňující SOLID principy a FastAPI standardy.",
+    "description": "Robust layered architecture compliant with SOLID principles and FastAPI standards.",
     "version": "2.0.0"
   },
   "paths": {
@@ -70,9 +70,9 @@
         "operationId": "login_auth_login_post",
         "requestBody": {
           "content": {
-            "application/json": {
+            "application/x-www-form-urlencoded": {
               "schema": {
-                "$ref": "#/components/schemas/UserLogin"
+                "$ref": "#/components/schemas/Body_login_auth_login_post"
               }
             }
           },
@@ -100,12 +100,100 @@
         }
       }
     },
+    "/auth/logout": {
+      "post": {
+        "tags": [
+          "Auth"
+        ],
+        "summary": "Logout",
+        "operationId": "logout_auth_logout_post",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UserLogout"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {}
+              }
+            }
+          },
+          "422": {
+            "description": "Validation Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/auth/me": {
+      "get": {
+        "tags": [
+          "Auth"
+        ],
+        "summary": "Get Me",
+        "operationId": "get_me_auth_me_get",
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {}
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "OAuth2PasswordBearer": []
+          }
+        ]
+      }
+    },
+    "/datasets/info": {
+      "get": {
+        "tags": [
+          "Datasets"
+        ],
+        "summary": "Get required CSV dataset structure",
+        "operationId": "get_dataset_structure_info_datasets_info_get",
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "items": {
+                    "$ref": "#/components/schemas/DatasetColumnInfo"
+                  },
+                  "type": "array",
+                  "title": "Response Get Dataset Structure Info Datasets Info Get"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/datasets/upload": {
       "post": {
         "tags": [
           "Datasets"
         ],
-        "summary": "Upload Dataset",
+        "summary": "Upload a new CSV dataset",
         "operationId": "upload_dataset_datasets_upload_post",
         "requestBody": {
           "content": {
@@ -122,47 +210,9 @@
             "description": "Successful Response",
             "content": {
               "application/json": {
-                "schema": {}
-              }
-            }
-          },
-          "422": {
-            "description": "Validation Error",
-            "content": {
-              "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/HTTPValidationError"
+                  "$ref": "#/components/schemas/UploadResponse"
                 }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/datasets/download/{filename}": {
-      "get": {
-        "tags": [
-          "Datasets"
-        ],
-        "summary": "Get Dataset Download Url",
-        "operationId": "get_dataset_download_url_datasets_download__filename__get",
-        "parameters": [
-          {
-            "name": "filename",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string",
-              "title": "Filename"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Successful Response",
-            "content": {
-              "application/json": {
-                "schema": {}
               }
             }
           },
@@ -184,8 +234,8 @@
         "tags": [
           "Datasets"
         ],
-        "summary": "Remove Dataset",
-        "operationId": "remove_dataset_datasets__filename__delete",
+        "summary": "Delete a dataset from the system",
+        "operationId": "delete_dataset_datasets__filename__delete",
         "parameters": [
           {
             "name": "filename",
@@ -202,7 +252,9 @@
             "description": "Successful Response",
             "content": {
               "application/json": {
-                "schema": {}
+                "schema": {
+                  "$ref": "#/components/schemas/UploadResponse"
+                }
               }
             }
           },
@@ -222,6 +274,65 @@
   },
   "components": {
     "schemas": {
+      "Body_login_auth_login_post": {
+        "properties": {
+          "grant_type": {
+            "anyOf": [
+              {
+                "type": "string",
+                "pattern": "^password$"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Grant Type"
+          },
+          "username": {
+            "type": "string",
+            "title": "Username"
+          },
+          "password": {
+            "type": "string",
+            "format": "password",
+            "title": "Password"
+          },
+          "scope": {
+            "type": "string",
+            "title": "Scope",
+            "default": ""
+          },
+          "client_id": {
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Client Id"
+          },
+          "client_secret": {
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "format": "password",
+            "title": "Client Secret"
+          }
+        },
+        "type": "object",
+        "required": [
+          "username",
+          "password"
+        ],
+        "title": "Body_login_auth_login_post"
+      },
       "Body_upload_dataset_datasets_upload_post": {
         "properties": {
           "file": {
@@ -236,6 +347,38 @@
         ],
         "title": "Body_upload_dataset_datasets_upload_post"
       },
+      "DatasetColumnInfo": {
+        "properties": {
+          "column_name": {
+            "type": "string",
+            "title": "Column Name",
+            "description": "Name of the column in the CSV file"
+          },
+          "data_type": {
+            "type": "string",
+            "title": "Data Type",
+            "description": "Expected data type (e.g., int, float, string)"
+          },
+          "required": {
+            "type": "boolean",
+            "title": "Required",
+            "description": "Indicates if the column is required"
+          },
+          "description": {
+            "type": "string",
+            "title": "Description",
+            "description": "Detailed description of what the variable means"
+          }
+        },
+        "type": "object",
+        "required": [
+          "column_name",
+          "data_type",
+          "required",
+          "description"
+        ],
+        "title": "DatasetColumnInfo"
+      },
       "HTTPValidationError": {
         "properties": {
           "detail": {
@@ -249,24 +392,39 @@
         "type": "object",
         "title": "HTTPValidationError"
       },
-      "UserLogin": {
+      "UploadResponse": {
+        "properties": {
+          "status": {
+            "type": "string",
+            "title": "Status",
+            "description": "Operation status (success/error)"
+          },
+          "message": {
+            "type": "string",
+            "title": "Message",
+            "description": "Detailed message for the user"
+          }
+        },
+        "type": "object",
+        "required": [
+          "status",
+          "message"
+        ],
+        "title": "UploadResponse"
+      },
+      "UserLogout": {
         "properties": {
           "email": {
             "type": "string",
             "format": "email",
             "title": "Email"
-          },
-          "password": {
-            "type": "string",
-            "title": "Password"
           }
         },
         "type": "object",
         "required": [
-          "email",
-          "password"
+          "email"
         ],
-        "title": "UserLogin"
+        "title": "UserLogout"
       },
       "UserRegister": {
         "properties": {
@@ -326,6 +484,17 @@
           "type"
         ],
         "title": "ValidationError"
+      }
+    },
+    "securitySchemes": {
+      "OAuth2PasswordBearer": {
+        "type": "oauth2",
+        "flows": {
+          "password": {
+            "scopes": {},
+            "tokenUrl": "auth/login"
+          }
+        }
       }
     }
   }
